# ripsed

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  GUIDE.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
checkpoint/: state.json
crates/ripsed/: Cargo.toml
crates/ripsed-cli/: Cargo.toml
crates/ripsed-cli/src/: args.rs  file_mode.rs  human.rs  interactive.rs  json_mode.rs  lib.rs  main.rs  pipe_mode.rs  script_mode.rs  shared.rs
crates/ripsed-cli/tests/: atomic_write_test.rs  cli_autodetect_test.rs  cli_human_test.rs  cli_json_test.rs  config_test.rs  cross_platform_test.rs  error_hint_test.rs  gitignore_test.rs  hardening_test.rs  new_ops_test.rs  script_test.rs  undo_test.rs
crates/ripsed-cli/tests/common/: mod.rs
crates/ripsed-core/: Cargo.toml  README.md
crates/ripsed-core/benches/: engine_bench.rs
crates/ripsed-core/src/: config.rs  engine.rs  matcher.rs  operation.rs  script.rs  undo.rs
crates/ripsed-fs/: Cargo.toml  README.md
crates/ripsed-fs/src/: discovery.rs  encoding.rs  lib.rs  reader.rs  writer.rs
crates/ripsed-json/: Cargo.toml  README.md
crates/ripsed-json/src/: request.rs
crates/ripsed/src/: apply.rs  lib.rs
crates/ripsed/tests/: concurrent_write_test.rs
fuzz/corpus/fuzz_autodetect/: lookalike  text
fuzz/corpus/fuzz_engine/: lines
fuzz/corpus/fuzz_json_request/: delete  valid
fuzz/corpus/fuzz_regex_input/: anchors  capture  flags  invalid
fuzz/fuzz_targets/: fuzz_engine.rs  fuzz_regex_input.rs
heartbeats/: w3Lb.json
issues/036e35f5-767d-40b1-b43d-34f079a7a286/comments/: 4fdf7490-01d7-4a89-a894-692a2e432ff2.json  57b365e6-9851-41a4-8b23-4f6008e96ca4.json
issues/039e3809-76ad-44cf-a95f-79d3685ffe83/comments/: 41041997-3881-46ca-9a3f-e1243755d5e3.json
issues/046a34ce-4f61-4359-bc05-46ccdd5c734f/comments/: 722f1bb5-5392-4301-b4b1-085dc3795d09.json
issues/07b847cc-cf6d-4214-9285-d317992296ac/comments/: 6866881e-a235-4a69-b60e-b7361be70511.json  987ab310-01c3-4d45-936b-ac9cb7f56b85.json
issues/0882c1e9-b9d7-4f04-a72d-80ad1afbc306/comments/: 09e7f693-5d30-44ef-93e9-8083ec773e2a.json  0a7c4192-9d64-422c-a186-9ee201c26b6b.json  5e0d98c3-d5e7-457f-bba7-60e7f3392e94.json
issues/125b0933-9b10-4da3-9910-61dc3ec181ea/comments/: 0785ce15-4464-40d5-964f-8a4d1238aba8.json  3466200e-92bd-42b7-b19f-2b154562561e.json
issues/155e6385-aadb-4dc0-91c9-cdacdd33b81c/comments/: 5ac5fc1a-4f9d-427b-a88a-6313a4a02b7f.json  79dd4778-a8cc-46f0-97c9-23d5f5155e71.json
issues/157e5986-63f3-4be1-bcc0-759725355780/comments/: 66d15d20-09f8-4b0b-b5b4-c8539d65a7c8.json  85d2a87a-75bb-46af-8c50-86c61fa72d7a.json  c624cc6c-2d89-4f9e-b4e0-30c509bb1a05.json  f507a50d-f43f-45c4-820f-6dfe9afeb04a.json
issues/1f7f7b58-9faa-4ff7-9ea7-b4147db17b3a/comments/: 245a0cac-90fc-4f1c-a3c2-45ef78706656.json  b5e9a720-43db-414b-b7c9-54c63615853c.json  e96f625a-5919-47d1-8707-640066ab7e9d.json
issues/21abc6d7-f590-4592-9eaf-8ad3b384a6e3/comments/: 037dfad1-3240-4d67-82d3-04edaa19822c.json  6c0ce171-f01d-46fc-a069-1e2f42c6244e.json  8254935f-212d-411d-a091-b64d6c84bf4c.json
issues/22735eb4-7941-40ab-a42f-36ddc51cefc4/comments/: 8695f70c-f388-4a10-930f-d8b77a7df13b.json
issues/25374111-b725-4bca-9179-0f227dccae11/: issue.json
issues/2a3ce7ed-58cc-4fc6-916d-6a001aa8030b/: issue.json
issues/34841220-fa43-4466-b739-4581d6fd10f5/: issue.json
issues/35aad937-e978-4a09-a521-24d1ee272b3d/: issue.json
issues/35c5d107-6a85-4608-9b5c-6b203a014b10/: issue.json
issues/3f87d89a-ce7d-451f-8dc2-c3eacae9fc27/: issue.json
issues/4f6485a9-4aa2-4a16-bc1f-7e4113de6576/: issue.json
issues/669f4fd7-efb7-4655-8c34-9275cf284baf/: issue.json
issues/6fb1814c-3823-42db-8049-46359b97f25c/: issue.json
issues/7263381d-169e-42d7-b0f0-d5ea97df4558/: issue.json
issues/7512c369-0378-4ee9-9b27-fab0b174b9b6/: issue.json
issues/7548ae3e-a47e-4177-9808-daa2ad3b6766/: issue.json
issues/87a9560b-be76-4c53-946e-ae369fa94308/: issue.json
issues/887ec7c6-2d38-4b92-b660-07c9a4bd523e/: issue.json
issues/8bac5267-736b-4bfb-80fc-9e312b46cd89/: issue.json
issues/8bca9f8b-fd37-44bd-9244-5bfaaa9a61ce/: issue.json
issues/8ed4b60f-e5c4-4f3c-a504-e96255a987f3/: issue.json
issues/8f2e084d-7d64-4005-ab6d-9ae369d92953/: issue.json
issues/94eab057-2cd7-4fbf-841e-e3dc0aa99b5c/: issue.json
issues/95071bea-749a-48e6-b9e5-e6f2fb9e9a5c/: issue.json
issues/99164362-a629-435b-a369-3041a1664df8/: issue.json
issues/9d0e1c5a-7810-4c62-8ce6-b54d41beadcb/: issue.json
issues/9edbe1b1-ebae-48ba-be96-02b9cbd6528a/: issue.json
issues/ad4901e4-68ee-4f8a-8c53-f831067d2077/: issue.json
issues/aea4d4d0-b973-4c57-97b1-d1056a67a0ed/: issue.json
issues/b05e1b61-4f7e-42cf-97f2-9b0fcda24782/: issue.json
issues/b086fb25-4ac9-4712-b341-2c25748bc9cf/: issue.json
issues/b637086a-1c67-468d-91fc-3b0121ad558a/: issue.json
issues/c6684cae-b7c4-460e-9543-3e8b9265b668/: issue.json
issues/c755cc50-6764-4125-89de-3e9869f9781d/: issue.json
issues/c91b30f7-6fa3-4f42-8a95-dab061b9cc56/: issue.json
issues/c94e6355-c5d7-4d3f-b071-74956dafaf67/: issue.json
issues/cf077e01-75e1-4a1a-86d3-00dec2207225/: issue.json
issues/d5aeb4d5-54bc-4540-b6dc-d1f4a251de80/: issue.json
issues/d755d76e-6dc9-4873-9472-ccd025c51dd2/: issue.json
issues/f49f9799-1203-4bed-8d20-f434a8edbe20/: issue.json
locks/: 100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  22.json  84.json  85.json  86.json  88.json  89.json  90.json  91.json  92.json  93.json  94.json  95.json  96.json  97.json  98.json  99.json
meta/: counters.json
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/homebrew/: ripsed.rb
packaging/scoop/: ripsed.json
trust/: allowed_signers
trust/approvals/: l6vc.json  w3Lb.json
trust/keys/: w3Lb.pub
xtask/: Cargo.toml
xtask/src/: main.rs
(+186 files in other folders)
