[workspace]
members = [
    "crates/ripsed",
    "crates/ripsed-core",
    "crates/ripsed-fs",
    "crates/ripsed-json",
    "crates/ripsed-cli",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["ripsed contributors"]
repository = "https://github.com/dollspace-gay/ripsed"
homepage = "https://github.com/dollspace-gay/ripsed"
keywords = ["sed", "find-and-replace", "regex", "text-processing", "cli"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.93"

[workspace.dependencies]
# Internal crates
ripsed = { path = "crates/ripsed", version = "0.3.0" }
ripsed-core = { path = "crates/ripsed-core", version = "0.3.0" }
ripsed-fs = { path = "crates/ripsed-fs", version = "0.3.0" }
ripsed-json = { path = "crates/ripsed-json", version = "0.3.0" }

# Core dependencies
regex = "1"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
strsim = "0.11"

# File system
globset = "0.4"
ignore = "0.4"
rayon = "1"
memmap2 = "0.9"
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive"] }
anstream = "1"
anstyle = "1"

# Platform
libc = "0.2"

# Dev / Test
proptest = "1"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.8", features = ["html_reports"] }
