[package]
name = "ripsed-fs"
description = "File system layer for ripsed — discovery, reading, atomic writes"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ignore = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
