[package]
name = "ripsed-json"
description = "Agent/JSON interface for ripsed — request/response schema, auto-detection"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ripsed-core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
